# tinsel

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
tinsel/runner/: __init__.py
tinsel/runner/day_template/: run.py
