
[metadata]
name = tinsel
version = attr: tinsel.VERSION
description = aAn Advent of Code utils package
url = https://github.com/tannerstephens/tinsel
author = Tanner Stephens
author_email = me@tannerstephens.com
license_file = LICENSE.md

[options]
zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    aoc = tinsel.runner:main
